[gd_scene load_steps=2 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 150.0
margin_bottom = 600.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="MarginContainer" parent="Panel"]
margin_right = 85.0
margin_bottom = 81.0
custom_constants/margin_top = 25
custom_constants/margin_left = 35
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/ButtonContainer"]
margin_left = 35.0
margin_top = 25.0
margin_right = 117.0
margin_bottom = 111.0
custom_constants/separation = 13

[node name="RunButton" type="Button" parent="Panel/ButtonContainer/HBoxContainer"]
margin_right = 82.0
margin_bottom = 20.0
text = "Draw Lines"

[node name="PrevButton" type="Button" parent="Panel/ButtonContainer/HBoxContainer"]
margin_top = 33.0
margin_right = 82.0
margin_bottom = 53.0
text = "Prev"

[node name="NextButton" type="Button" parent="Panel/ButtonContainer/HBoxContainer"]
margin_top = 66.0
margin_right = 82.0
margin_bottom = 86.0
text = "Next"

[node name="ScoreLabel" type="Label" parent="Panel"]
margin_left = 22.4846
margin_top = 170.891
margin_right = 73.4846
margin_bottom = 184.891
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineContainer" type="Node2D" parent="."]
[connection signal="pressed" from="Panel/ButtonContainer/HBoxContainer/RunButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/ButtonContainer/HBoxContainer/PrevButton" to="." method="_on_PrevButton_pressed"]
[connection signal="pressed" from="Panel/ButtonContainer/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
